...
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="10sp"
        android:paddingVertical="16sp">

        <EditText
            android:id="@+id/editTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:autofillHints="Title"
            tools:ignore="LabelFor"
            android:hint="@string/title"
            android:text="@={viewModel.note.title}"/>

        <EditText
            android:id="@+id/editContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:autofillHints="Content"
...
